frontend/src/App.module.scss
@import "./styles/colors";

.main {
  margin: 0;
  padding: 2rem;
  font-family: "Press Start 2P", monospace;
  display: flex;
  flex-direction: column;
  background: var(--colors__background);
  color: var(--colors__dark-purple);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2rem;

  @media (min-width: 768px) {
    flex-direction: row-reverse;
  }
}

.sideBar {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2rem;

  @media (min-width: 768px) {
    width: 20%;
  }
}

.stats,
.bookContainer {
  border: 2px solid var(--colors__dark-purple);
  background: var(--colors__light-purple);
  border-radius: 1rem;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.statsTotal,
.statsGoal {
  margin: 0;
}

.progressWrapper {
  width: 100%;
  background-color: var(--colors__light-gray);
  border-radius: 10px;
  height: 16px;
  margin-top: 0.5rem;
  overflow: hidden;
}

.progressBar {
  height: 100%;
  background-color: var(--colors__hot-pink);
  transition: width 0.3s ease;
}

.mainSection {
  width: 100%;

  @media (min-width: 768px) {
    width: 70%;
  }
}

.mainTitle {
  font-size: 56px;
  text-align: center;
}

.title {
  font-size: 24px;
  margin: 0;
}

.allBooks {
  font-size: 24px;
  margin: 0;
  margin: 2rem 0 1rem 0;
}

.top-title {
  margin: 0;
  font-size: 24px;
}

.selector {
  border-radius: 1rem;
  padding: 0.25rem;
  margin: 0.25rem;
  background-color: var(--colors__background);
  color: var(--colors__dark-purple);
  border: 2px solid var(--colors__dark-purple);
  transition: background-color 0.3s ease;
  font-family: "Press Start 2P", monospace;
  font-weight: 600;

  &:hover {
    background-color: var(--colors__background-blue);
    color: var(--colors__light-purple);
  }

  &:focus,
  &:focus-visible {
    border: 2px solid var(--colors__hot-pink);
  }
}

.filter {
  padding-top: 2rem;
}

.books-container,
.pinnedSection {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
  justify-content: flex-start;
  width: 100%;
}

